# MasterThesis

./: .gitignore  DataHandler.py  README.md  mnist.py  nrrd_to_npz_converter.py  pyproject.toml  resample.py  test.py  tre.py  validation.py  vectorpoints.py
frameworks/: Airlab.py  ImageRegistrationInterface.py  SimpleElastix.py  VoxelmorphTF.py  VoxelmorphTorch.py  train_vxm.py
models/mnist/: best_model.pt  ep300_st100_lr0.0001_bat80300.pt  vxmtf_ep300_st100_lr0.0001_bat8_final_loss0_0085.h5  vxmtf_ep300_st100_lr0.0001_bat8_final_loss0_0085_hist.json
models/mnist/airlab/: results.json
models/mnist/airlab_mse/: results.json
models/mnist/simpleelastix_mse/: results.json
models/mnist/vxmtf_ep200_st100_lr0_001_bat8_actual_ep154_final_loss0_0073/: hist.json  results.json  train_time.json  weights.h5
models/mnist/vxmth_ep200_st100_lr0_001_bat8_final_loss0_01720200849696994/: model.pt  results.json  train_time.json
models/synthetic/: best_model.pt
models/synthetic/airlab_mi/: results.json
models/synthetic/airlab_mse/: results.json
models/synthetic/simpleelastix_mi/: results.json
models/synthetic/simpleelastix_mse/: results.json
models/synthetic/test_model_30_100_8batch/: results.json
models/synthetic/vxmtf_cbct_ct_ep200_st100_lr0_001_bat8_final_loss0_0028/: hist.json  results.json  train_time.json  weights.h5
models/synthetic/vxmtf_ep200_st100_lr0_001_bat8_final_loss0_0004/: hist.json  results.json  train_time.json  weights.h5
models/synthetic/vxmtf_ep200_st100_lr0_001_bat8withResampling_final_loss0_0016/: hist.json  results.json  train_time.json  (+1 more)
(+109 files in other folders)
